--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,55 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root {
+	--foreground-rgb: 255, 255, 255;
+	--background-start-rgb: 214, 219, 220;
+	--background-end-rgb: 255, 255, 255;
+}
+
+@media (prefers-color-scheme: dark) {
+	:root {
+		--foreground-rgb: 255, 255, 255;
+		--background-start-rgb: 0, 0, 0;
+		--background-end-rgb: 0, 0, 0;
+	}
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+		sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	color: rgb(var(--background-end-rgb));
+	background: var(--foreground-rgb);
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+		monospace;
+}
+
+@layer components {
+	.table--row {
+		@apply px-4 py-2 rounded-md border border-slate-300;
+	}
+
+	.input--field {
+		@apply rounded p-2 focus:outline-none focus:ring;
+	}
+
+	.primary--button {
+		@apply bg-blue-500 text-white rounded p-2 cursor-pointer hover:bg-blue-700 uppercase;
+	}
+
+	.delete--button {
+		@apply text-red-500 flex items-center justify-evenly border border-red-500 bg-white hover:text-white hover:bg-red-500 rounded-md px-4 py-2 w-full duration-300;
+	}
+
+	.default--button {
+		@apply text-gray-600 flex items-center justify-evenly border border-gray-500 bg-white hover:text-white hover:bg-gray-600 rounded-md px-4 py-2 w-full duration-300;
+	}
 }
